--- a/step-05/src/style.css
+++ b/step-05/src/style.css
@@ -1,9 +1,10 @@
-/* :root {
-    --bs-nav-link-color: white;
-} */
-
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+main {
+    margin-top: 52px;
+    margin-bottom: 52px;
 }
